src/test/deca/context/invalid/with-object/protected_field.deca
class A {
    protected int x;
}

class X {
    void m(){
        A a = new A();
        println(a.x) ; // Erreur contextuelle : x est protege
    }
}